[package]
name = "discord-threads-link-expander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
futures-util = "0.3.29"
linkify = "0.10.0"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { default-features = false, features = [
    "macros",
    "signal",
    "rt-multi-thread",
], version = "1.0" }
toml = "0.8.8"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
url = "2.5.0"
